<resources>
    <string name="app_name">>_&lt; Deadline >_&lt;</string>
    <string name="text_days">%1$s\n%2$s</string>
    <string name="text_hours">%1$s\n%2$s</string>
    <string name="text_mins">%1$s\n%2$s</string>
    <string name="text_secs">%1$s\n%2$s</string>
    <string name="text_count">До %1$d экзамена</string>
    <string name="text_nothing">Нету ничего!\nПоздравляю</string>
    <string name="text_error">Произошла критическая ошибка!</string>
    <string name="text_stopped">Сервис остановлен!</string>
</resources>
